Fixed map clipping

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
     position: absolute;
     left: 0px;
     width: 255px;
-    height: 100%;
+    /*height: 100%;*/
     top: 50px;
     bottom: 0;
     overflow-y: auto;
@@ -28,7 +28,8 @@ body {
     position: absolute;
     right: 0px;
     left: 255px;
-    height: 100%;
+    /*height: 100%;*/
+    bottom: 0;
     top: 50px;
 }
 
